--- a/02-intro/intro-to-notebooks.ipynb
+++ b/02-intro/intro-to-notebooks.ipynb
@@ -311,11 +311,11 @@
    "source": [
     "##### Question 05\n",
     "What do the numbers in `figsize=(10, 5)` control? Try changing them and observe what happens.\n",
-    "- **Answer:** \n",
+    "- **Answer:changes the size of the picture** \n",
     "\n",
     "##### Question 06\n",
     "In what scenario would changing `figsize` be useful in data visualization?\n",
-    "- **Answer:** "
+    "- **Answer:fig size would be useful if you want your picture small bigger for better quaulity** "
    ]
   },
   {
@@ -347,11 +347,11 @@
    "source": [
     "##### Question 07\n",
     "What did we change in our `plt.plot()` functions to modify a line's color? What other types values do you think we use here? (think CSS)\n",
-    "- **Answer:** \n",
+    "- **Answer:just add a color to the function to change the color of the line.it also shows the line to straight and full but one line is dotted** \n",
     "\n",
     "##### Question 08\n",
     "What did we change in our `plt.plot()` functions to modify the style of a line? What other linestyles are available for us to use in matplotlib? [Documentation](https://matplotlib.org/stable/).\n",
-    "- **Answer:** "
+    "- **Answer:you have to change to linestyle of the line and there are solid dotted and dashed** "
    ]
   },
   {
@@ -381,11 +381,11 @@
    "source": [
     "##### Question 09\n",
     "What does the pad=20 in `plt.title()` do? Try different numbers.\n",
-    "- **Answer:** \n",
+    "- **Answer:the padding of the title** \n",
     "\n",
     "##### Question 10\n",
     "What does the functions `xlabel` and `ylabel` do? Try commenting them out.\n",
-    "- **Answer:** "
+    "- **Answer:the title of the x and y axis** "
    ]
   },
   {
@@ -413,11 +413,11 @@
    "source": [
     "##### Question 11\n",
     "What changed when we added `facecolor='lightgray'` to `plt.figure`?\n",
-    "- **Answer:** \n",
+    "- **Answer:it changes the background color** \n",
     "\n",
     "##### Question 12\n",
     "What didnt change in this example? Hyposthesize why the whole graph did not change color.\n",
-    "- **Answer:** "
+    "- **Answer:the whole graph did not change because the graph and figure is not in the same function.** "
    ]
   },
   {
@@ -446,7 +446,7 @@
    "source": [
     "##### Question 13\n",
     "What's the difference between `plt.figure(facecolor='...')` and `ax.set_facecolor('...')`?\n",
-    "- **Answer:** \n",
+    "- **Answer:plt.figure(facecolor) is the color of the entire thing and ax.setfacecolor is the color of the certain axes.** \n",
     "\n",
     "##### Question 14\n",
     "Why have two seperate functions for setting the background? Create a scenario in which that would be useful.\n",
@@ -510,7 +510,7 @@
    "source": [
     "##### Question 15\n",
     "What is the general trend in this data? Is it going up, down, or staying the same?\n",
-    "- **Answer:** agsdfashkjdhajkdhkjasda\n",
+    "- **Answer:** \n",
     "\n",
     "##### Question 16 \n",
     "Looking at the numbers on the y-axis, what was the lowest sales amount? What was the highest?\n",
